@@ -1,3 +1,6 @@
+2016-02-24 Robert Heel <typo3@bobosch.de>
+	* Bugfix: Add flexform data move to new update script.
+
 2016-01-07 Robert Heel <typo3@bobosch.de>
 	* Security fix: Hash the one time code.
 
